# Hyperparameter-Tuning-Cookbook

./: .gitignore  0000spot_river_gui.qmd  001_optimization.qmd  001_optimization_surrogate.html  001_optimization_surrogate.ipynb  001_optimization_surrogate.qmd  001_sampling.ipynb  001_sampling.qmd  001_surrogate.html  001_surrogate.ipynb  001_surrogate.qmd  002_awwe.html  002_awwe.ipynb  002_awwe.qmd  002_awwe.quarto_ipynb  002_optimization.qmd  003_optimization_gp.qmd  003_scipy_optimize_intro.html  003_scipy_optimize_intro.ipynb  003_scipy_optimize_intro.qmd  003_scipy_optimize_intro.quarto_ipynb  004_scipy_optimize_intro.qmd  004_spot_sklearn_optimization.html  004_spot_sklearn_optimization.ipynb  004_spot_sklearn_optimization.qmd  004_spot_sklearn_optimization.quarto_ipynb  005_num_rsm.html  005_num_rsm.ipynb  005_num_rsm.qmd  005_num_rsm.quarto_ipynb  006_constructing_surrogate.ipynb  006_constructing_surrogate.qmd  006_infill.ipynb  006_infill.qmd  006_matrices.ipynb  006_matrices.qmd  006_num_gp.html  006_num_gp.ipynb  006_num_gp.qmd  006_num_gp.quarto_ipynb  (+472 more)
Lernmodule.d/: de_awwe.qmd  de_kriging.qmd  de_kriging_optimization.html  de_kriging_optimization.qmd
Old.d/: 018_spot_hpt_sklearn_multiclass_classification_randomforest.qmd  019_spot_hpt_sklearn_multiclass_classification_xgb.qmd  020_spot_hpt_sklearn_multiclass_classification_svc.qmd  021_spot_hpt_sklearn_multiclass_classification_knn.qmd  024_new_spot_hpt_river_friedman_hatr.ipynb  024_old_spot_hpt_river_friedman_hatr.qmd  024_spot_hpt_river_friedman_hatr.ipynb  026_spot_hpt_river_bananas_amfc.qmd  (+32 more)
userPackage/userpackage/: MANIFEST.in  README.md  makefile.sh  mkdocs.yml  pyproject.toml
userPackage/userpackage/docs/: about.md  examples.md
userPackage/userpackage/src/parksim/utils/: dummy.py
userPackage/userpackage/src/userpackage/: data_utils.py
userPackage/userpackage/test/: test_dummy.py
(+13085 files in other folders)
