[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools_scm[toml]"
]
build-backend = "setuptools.build_meta"

[project]
name = "parksim"
version = "0.0.1"
authors = [
  { name="T. Bartz-Beielstein", email="tbb@bartzundbartz.de" }
]
description = "parksim - a Python package for parking simulation"
readme = "README.md"
license = { text="AGPL-3.0-or-later" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
# PEP 621 dependencies declaration
dependencies = [
  "build",
  "captum",
  "lightning>=2.0.0rc0",
  "graphviz",
  "matplotlib",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.33",
  "mkdocstrings-python>=1.10.8",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-section-index>=0.3.9",
  "numpy",
  "nbformat",
  "pandas",
  "plotly",
  "PyQt6",
  "python-markdown-math",
  "pytorch-lightning>=1.4",
  "scikit-learn",
  "scipy",
  "seaborn",
  "tabulate",
  "tensorboard",
  "torch",
  "torch-tb-profiler",
  "torchmetrics",
  "torchvision",
  "torchviz",
]
# dynamic = ["version"]

[project.urls]
"Homepage" = "https://www.spotseven.de"
Issues = "https://github.com/sequential-parameter-optimization/parksim/issues"
Repository = "https://github.com/sequential-parameter-optimization/parksim"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.black]
line-length = 200
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

